examples/test/testpolicy19364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19364
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key11: value7
      key15: value45
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
          key13: value43
          key39: value31
